force-app/main/default/objects/Trader_Type__c/Trader_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>客商类型，sap对应关系</description>
    <label>Trader Type</label>
</CustomObject>