force-app/main/default/objects/Trader_Type__c/fields/CustomerDetailType__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetailType__c</fullName>
    <description>客商明细类型</description>
    <label>Customer Detail Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>