force-app/main/default/objects/Trader_Type__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>