force-app/main/default/objects/Trader_Type__c/fields/Trader_Type__c.field-meta.xml
<CustomField>
    <fullName>Trader_Type__c</fullName>
    <label>Trader Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>